🖖👵 Checkpoint ./db.json:15273419/8 ./server.js:15273419/119 ./views/index.pug:15273419/98

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,7 @@ button
 
 p Books list
 each book in books
-  li= book.title
+  li
+    span= book.title
+    button
+      a(href="/books/"+ book.id) Delete
