✊🌞 Checkpoint ./server.js:15273419/59 ./views/rename.pug:15273419/224 ./views/index.pug:15273419/61

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,5 @@ each book in books
     span= book.title
     button
       a(href="/books/"+ book.id) Delete
+    button  
+      a(href="/rename/"+book.id) Rename
