--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,6 @@ each book in books
   li
     span= book.title
     button
-      a(href="/books/"+ book.id) Delete
+      a(href="/books/" + book.id) Delete
     button  
-      a(href="/rename/"+book.id) Rename
+      a(href="/rename") Rename
