✂️🍠 Checkpoint ./views/rename.pug:15273419/176 ./views/index.pug:15273419/10 ./server.js:15273419/69

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ each book in books
     button
       a(href="/books/" + book.id) Delete
     button  
-      a(href="/rename") Rename
+      a(href="/rename/"+ book.id) Rename
