🙉🙅 Checkpoint ./server.js:15273419/243 ./views/index.pug:15273419/21 ./views/rename.pug:15273419/98

--- a/views/rename.pug
+++ b/views/rename.pug
@@ -2,4 +2,7 @@ form(action="/rename",method="POST")
   p Write the title which you want to change:
   label Title
   input(type="text",name="title")
+  button 
+    a() change
+    
   
