--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ each book in books
     button
       a(href="/books/" + book.id) Delete
     button  
-      a(href="/rename/"+ book.id) Rename
+      a(href="/books/"+ book.id+"/rename") Rename
