--- a/views/rename.pug
+++ b/views/rename.pug
@@ -1,8 +1,9 @@
-form(action="/rename",method="POST")
+form(action="/books/rename",method="POST")
   p Write the title which you want to change:
   label Title
   input(type="text",name="title")
   button 
+    a(href="/books /rename") Change
     
     
   
