🏡🍠 Checkpoint ./server.js:15273419/187 ./views/rename.pug:15273419/202

--- a/views/rename.pug
+++ b/views/rename.pug
@@ -1,9 +1,9 @@
-form(action="/books/rename",method="POST")
+form(action="/books",method="POST")
   p Write the title which you want to change:
   label Title
   input(type="text",name="title")
-  button 
-    a(href="/books /rename") Change
+    button 
+      a(href="/") Change
     
     
   
