🚉🎫 Checkpoint ./views/index.pug:15273419/63 ./server.js:15273419/10 ./views/rename.pug:15273419/30

--- a/views/rename.pug
+++ b/views/rename.pug
@@ -1,9 +1,9 @@
-form(action="/books",method="POST")
+form(action="/books/rename",method="POST")
   p Write the title which you want to change:
   label Title
   input(type="text",name="title")
     button 
-      a(href="/") Change
+      a(href="/index") Change
     
     
   
