💅🦄 Checkpoint ./server.js:15273419/1136 ./views/rename.pug:15273419/375

--- a/views/rename.pug
+++ b/views/rename.pug
@@ -1,9 +1,5 @@
-form(action="/books/rename",method="POST")
+form(action="/books/" + bookId + "/rename", method="POST")
   p Write the title which you want to change:
   label Title
   input(type="text",name="title")
-    button 
-      a(href="/index") Change
-    
-    
-  
+  button(type="submit") Change
