--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 button
   a(href="/books") Add book
+span &nbsp;
+button
+  a(href="/users") Users
 
 p Books list
 each book in books
@@ -7,5 +10,6 @@ each book in books
     span= book.title
     button
       a(href="/books/" + book.id) Delete
+    span &nbsp;
     button  
       a(href="/books/"+book.id +"/rename") Rename
