💂⛸ Checkpoint ./server.js:15273419/344 ./db.js:15273419/15 ./views/users.pug:15273419/153 ./views/createUser.pug:15273419/193

--- a/views/users.pug
+++ b/views/users.pug
@@ -1,5 +1,10 @@
 h1 Manage users
-p Userlist
+button
+  a(href="/users/create") Create user
+span &nbsp;
+p User list
 
+each user in users
+  li= user.name
 
   
