🍐👯 Checkpoint ./views/users.pug:15273419/463 ./server.js:15273419/237

--- a/views/users.pug
+++ b/views/users.pug
@@ -5,6 +5,13 @@ span &nbsp;
 p User list
 
 each user in users
-  li= user.name
+  li
+    span= user.name
+    span &nbsp
+    button(type=)
+    span &nbsp
+    button
+      a(href="#") Rename User  
+      
 
   
