🎄👍 Checkpoint ./views/users.pug:15273419/240 ./server.js:15273419/96 ./views/rename-User.pug:15273419/232

--- a/views/users.pug
+++ b/views/users.pug
@@ -8,10 +8,11 @@ each user in users
   li
     span= user.name
     span &nbsp
-    button(type=)
+    button
+      a(href="users/"+user.id) Delete
     span &nbsp
     button
-      a(href="#") Rename User  
+      a(href="users/rename") Rename User  
       
 
   
