🍙😹 Checkpoint ./views/users.pug:15273419/30 ./server.js:15273419/319 ./views/rename-User.pug:15273419/24

--- a/views/rename-User.pug
+++ b/views/rename-User.pug
@@ -1,4 +1,4 @@
-form(action="/books/" + userId + "/rename", method="POST")
+form(action="/users/" + userId + "/rename", method="POST")
   p Write the name you want to change:
   label Name
   input(type="text",name="name")
