🚶🚞 Checkpoint ./views/books/index.pug:15273419/4 ./routes/book.route.js:15273419/44

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -9,7 +9,7 @@ each book in books
   li
     span= book.title
     button
-      a(href="/books/" + book.id) Delete
+      a(href="books/" + book.id) Delete
     span &nbsp;
     button  
-      a(href="/books/"+book.id +"/rename") Rename
+      a(href="books/"+book.id +"/rename") Rename
