💅⚾️ Checkpoint ./server.js:15273419/172 ./views/books/index.pug:15273419/88 ./views/transaction/index.pug:15273419/123

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -3,6 +3,9 @@ button
 span &nbsp;
 button
   a(href="/users") Users
+span &nbsp;
+button
+  a(href="/transaction") Transactions 
 
 p Books list
 each book in books
