👴🚓 Checkpoint ./server.js:15273419/209 ./views/transactions/index.pug:15273419/86 ./views/books/index.pug:15273419/1

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -5,7 +5,7 @@ button
   a(href="/users") Users
 span &nbsp;
 button
-  a(href="/transaction") Transactions 
+  a(href="/transactions") Transactions 
 
 p Books list
 each book in books
