🐜🌋 Checkpoint ./views/transactions/create.pug:15273419/334

--- a/views/transactions/create.pug
+++ b/views/transactions/create.pug
@@ -1,2 +1,11 @@
 h1 Create Transactions
 
+form(action = "transactions/create")
+  label( for = "users") Choose user
+  select(id = "users", name ="userId")
+    each user in users
+      option(value = `${user.id}`)
+        span= user.name
+        
+      
+    
