--- a/views/transactions/create.pug
+++ b/views/transactions/create.pug
@@ -13,7 +13,7 @@ form(action = "transactions/create", method= "POST")
       option(value = `${book.id}`)
         span= book.title
   br
-  button(type = "submit") Create
+  button Create
  
   
       
