😬🐚 Checkpoint ./views/transactions/create.pug:15273419/31 ./server.js:15273419/30 ./db.js:15273419/2 ./views/transactions/index.pug:15273419/4 ./db.json:15273419/22

--- a/views/transactions/create.pug
+++ b/views/transactions/create.pug
@@ -1,6 +1,6 @@
 h1 Create Transactions
 
-form(action = "transactions/create", method= "POST")
+form( method= "POST")
   label( for = "users") Choose user:
   select(id = "users", name ="userId")
     each user in users
