🚖🎒 Checkpoint ./views/transactions/index.pug:15273419/147 ./controller/transaction.controller.js:15273419/68 ./routes/transaction.route.js:15273419/2

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -4,4 +4,8 @@ button
 p Transactions's list:
 ul  
   each object in transactions
-    li= `User: ${object.userId} - Book: ${object.bookId}`
+    li
+     span= `User: ${object.userId} - Book: ${object.bookId}`
+     span &nbsp
+     button
+       a(href="/transactions/"+object.id) Finish
