👨‍❤️‍👨🐡 Checkpoint ./controller/transaction.controller.js:15273419/408 ./routes/transaction.route.js:15273419/88 ./views/transactions/index.pug:15273419/36 ./db.json:15273419/287

--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -8,4 +8,4 @@ ul
      span= `User: ${object.userId} - Book: ${object.bookId}`
      span &nbsp
      button
-       a(href="/transactions/"+object.id) Finish
+       a(href="transactions/"+ object.id + "/detele") Finish
