🌸👧 Checkpoint ./views/index.pug:15273419/1302

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,17 @@
-h1 Nam's Bookstore
+extends ./layouts/common
+block content
 
-  button
-    a(href="/books") Books
-  span &nbsp;
-  button
-    a(href="/users") Users
-  span &nbsp;
-  button
-    a(href="/transactions") Transactions 
+  h1 Nam's Bookstore
+    
+     
+      
+  
+    button
+      a(href="/books") Books
+    span &nbsp;
+    button
+      a(href="/users") Users
+    span &nbsp;
+    button
+      a(href="/transactions") Transactions 
+  
