--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,18 @@ block content
 
   h1 Nam's Bookstore
     
-     
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light
+        a.navbar-brand(href='#') Navbar
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav',       aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-icon#navbarNav.collapse.navbar-collapse
+            ul.navbar-nav
+                li.nav-item.active
+                    a.nav-link(href='/books')| Books 
+                        span.sr-only (current)
+                li.nav-item
+                    a.nav-link(href='/users') Users
+                li.nav-item
+                    a.nav-link(href='/transactions') Transactions
     
     button
       a(href="/books") Books
