--- a/views/index.pug
+++ b/views/index.pug
@@ -1,14 +1,13 @@
 extends ./layouts/common
 block content
   nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-      a.navbar-brand(href='#') Navbar
-      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
-          span.navbar-toggler-icon
-      #navbarNavAltMarkup.collapse.navbar-collapse
-          .navbar-nav
-              a.nav-item.nav-link.active(href='/books')| Books 
-                  span.sr-only (current)
-              a.nav-item.nav-link(href='/users') Users
-              a.nav-item.nav-link(href='/transactions') Transactions
+    a.navbar-brand(href='#') Nam's Books
+    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+    .collapse.navbar-collapse#navbarNavAltMarkup
+      .navbar-nav
+        a.nav-item.nav-link(href='/books')| Books 
+        a.nav-item.nav-link(href='/users') Users
+        a.nav-item.nav-link(href='/transactions') Transactions
      
   
