⛲️🎯 Checkpoint ./controller/user.controller.js:15273419/363 ./views/users/createUser.pug:15273419/181

--- a/views/users/createUser.pug
+++ b/views/users/createUser.pug
@@ -1,7 +1,13 @@
-form(method="POST")
-  label User Name
-  input(type="text",name="name")
-  span &nbsp;
-  button(type = "submit") Add 
+extends ../layouts/common
+block content
+  if errors
+    each err in errors
+      .alert.alert-danger= err
+    
+  form(method="POST")
+    label User Name
+    input(type="text",name="name")
+    span &nbsp;
+    button(type = "submit") Add 
   
   
