--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -8,4 +8,4 @@ ul
      span= `User: ${object.userId} - Book: ${object.bookId}`
      span &nbsp
      button
-       a(href="transactions/"+ object.id + "/detele") Finish
+       a(href="transactions/"+ object.id + "/isComplete") Finish
