--- a/views/books/rename.pug
+++ b/views/books/rename.pug
@@ -1,10 +1,7 @@
-p Add books
+p Rename books
 
-form(action="/books",method="POST")
+form(method="POST")
   label Title
   input(type="text",name="title")
-  br
-  label Description
-  input(type="text",name="description")
   br
   button Submit
