👮🎫 Checkpoint ./views/books/index.pug:15273419/159 ./views/books/rename.pug:15273419/1307 ./views/books/create.pug:15273419/781

--- a/views/books/rename.pug
+++ b/views/books/rename.pug
@@ -1,7 +1,10 @@
-p Rename books
+extends ../layouts/common
+block content
+  .container  
+    h1 Add books
+    form(method="POST")
+      form-group
+        label(for="title") Title
+        input#title.form-control(name ="title")
 
-form(method="POST")
-  label Title
-  input(type="text",name="title")
-  br
-  button Submit
+      button.btn.btn-primary.mt-2 Submit
