--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -1,3 +1,19 @@
+extends ../layouts/common
+block content
+  .container  
+    h1 Add books
+    form(action="/books",method="POST")
+      form-group
+        label(for="title") Title
+        input#title.form-control(name ="title")
+      form-group
+        label(for="title") Title
+        input#title.form-control(name ="title") 
+    
+      
+      
+      button.btn.btn-primary.mt-2 Submit
+
 p Add books
 
 form(action="/books",method="POST")
