--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -7,20 +7,7 @@ block content
         label(for="title") Title
         input#title.form-control(name ="title")
       form-group
-        label(for="title") Title
-        input#title.form-control(name ="title") 
-    
-      
-      
+        label(for="description") Description
+        input#title.form-control(name ="description") 
+  
       button.btn.btn-primary.mt-2 Submit
-
-p Add books
-
-form(action="/books",method="POST")
-  label Title
-  input(type="text",name="title")
-  br
-  label Description
-  input(type="text",name="description")
-  br
-  button Submit
