--- a/views/users/rename.pug
+++ b/views/users/rename.pug
@@ -1,5 +1,11 @@
-form(action="/users/" + userId + "/rename", method="POST")
-  p Write the name you want to change:
-  label Name
-  input(type="text",name="name")
-  button(type="submit") Change
+extends ../layouts/common
+block content
+  .container  
+    h1 Rename User
+    form(action="/users/" + userId + "/rename",method="POST")
+      form-group
+        label(for="name") Name
+        input#title.form-control(name ="name")
+
+      button.btn.btn-primary.mt-2 Submit
+
