💘🏅 Checkpoint ./views/transactions/create.pug:15273419/1567 ./db.json:15273419/326

--- a/views/transactions/create.pug
+++ b/views/transactions/create.pug
@@ -5,35 +5,20 @@ block content
     form(method = "POST")
       form-group
         label( for = "users") Choose user:
-        select.form-control
+        select.form-control(id = "users", name ="userId")
           each user in users
             option(value = `${user.id}`)
               span= user.name
 
-      form-group
         label( for = "books") Choose Book:
-        select.form-control
-          each book in books
-            option(value = `${book.id}`)
-              span= user.book
-
-
-
-
-      form( method= "POST")
-        label( for = "users") Choose user:
-        select(id = "users", name ="userId")
-          each user in users
-            option(value = `${user.id}`)
-              span= user.name
-        br
-        label( for = "books") Choose book:
-        select(id = "books", name ="bookId")
+        select.form-control(id = "books", name ="bookId")
           each book in books
             option(value = `${book.id}`)
               span= book.title
-        br
-        button Create
+
+      button.btn.btn-primary.mt-2 Create
+
+
  
   
       
