🍂🍨 Checkpoint ./db.json:15273419/402 ./views/users/index.pug:15273419/2412 ./views/index.pug:15273419/4

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends ./layouts/common
 block content
   nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-    a.navbar-brand(href='#') Nam's Books
+    a.navbar-brand(href='/') Nam's Books
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     .collapse.navbar-collapse#navbarNavAltMarkup
