--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -5,7 +5,7 @@ block content
         if errors
             each error in errors
                 .alert.alert-danger= error
-        form(action="/auth/login",method = "POST")
+        form(method = "POST")
             .form-group    
                 label(for="email") Email
                 input#email.form-control(type="text" name = "email" value =values ? values.email :"")
