✈️🐥 Checkpoint ./views/auth/login.pug:15273419/954 ./views/books/create.pug:15273419/18 ./controller/auth.controller.js:15273419/398

--- a/views/books/create.pug
+++ b/views/books/create.pug
@@ -8,6 +8,6 @@ block content
         input#title.form-control(name ="title")
       form-group
         label(for="description") Description
-        input#title.form-control(name ="description") 
+        input#description.form-control(name ="description") 
   
       button.btn.btn-primary.mt-2 Submit
