🍜📅 Checkpoint ./middleware/auth.middleware.js:15273419/37 ./views/index.pug:15273419/18

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ block content
       .navbar-nav
         a.nav-item.nav-link(href='/books')| Books 
         a.nav-item.nav-link(href='/users') Users
-        a.nav-item.nav-link(href='/transactions') Transactions
+        if user
+          a.nav-item.nav-link(href='/transactions') Transactions
      
   
