🚁💧 Checkpoint ./middleware/auth.middleware.js:15273419/202 ./views/index.pug:15273419/27

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,8 +10,8 @@ block content
           a.nav-link(href='/books') Books
         li.nav-item
           a.nav-link(href='/users') Users
-        if user
-          li.nav-item
+        if display
+          li.nav-item.display
             a.nav-link(href='/transactions') Transactions
   
 
