🐥⏰ Checkpoint ./middleware/auth.middleware.js:15273419/188 ./views/index.pug:15273419/19 ./middleware/isAdmin.js:15273419/253

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,8 +10,8 @@ block content
           a.nav-link(href='/books') Books
         li.nav-item
           a.nav-link(href='/users') Users
-        if display
-          li.nav-item.display
+        if user
+          li.nav-item
             a.nav-link(href='/transactions') Transactions
   
 
