--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -6,7 +6,9 @@ block content
       each error in errors
         .alert.alert-danger= error
     form(method = "POST")
-    
+      form-group
+        label(for="name") Name
+        input#name.form-control(type="text" name = "name" value =values ? values.name :"")
       form-group
         label(for="email") Email
         input#email.form-control(type="text" name = "email" value =values ? values.email :"")
