--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -8,12 +8,12 @@ block content
     form(method = "POST")
       form-group
         label(for="name") Name
-        input#name.form-control(type="text" name = "name" value =values ? values.name :"")
+        input#name.form-control(type="text" name = "name")
       form-group
         label(for="email") Email
-        input#email.form-control(type="text" name = "email" value =values ? values.email :"")
+        input#email.form-control(type="text" name = "email")
       form-group    
         label(for="password") Password
-        input#password.form-control(type="password" name = "password" value =values ? values.password :"")    
+        input#password.form-control(type="password" name = "password")    
       button.btn.btn-primary.mt-2 Register
     
