🏞🌜 Checkpoint ./db.json:15273419/547 ./controller/auth.controller.js:15273419/8288 ./views/auth/login.pug:15273419/100

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -13,4 +13,6 @@ block content
         label(for="password") Password
         input#password.form-control(type="password" name = "password" value =values ? values.password :"")    
       button.btn.btn-primary.mt-2 Login
+      button.btn.btn-primary.mt-2
+        a(href="/auth/register") Register
     
