--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -13,6 +13,5 @@ block content
         label(for="password") Password
         input#password.form-control(type="password" name = "password" value =values ? values.password :"")    
       button.btn.btn-primary.mt-2 Login
-      button.btn.btn-primary.mt-2
-        a(href="/auth/register") Register
+      a.btn.btn-primary.mt-2.ml-2(href="/auth/register") Register
     
