🤘⛪️ Checkpoint ./views/layouts/common.pug:15273419/1352 ./views/layouts/navbar.pug:15273419/2353 ./views/index.pug:15273419/723 ./middleware/auth.middleware.js:15273419/3 ./server.js:15273419/2747 ./views/books/index.pug:15273419/32

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,8 @@
 extends ./layouts/common
-block content
-  nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-    a.navbar-brand(href='/') Nam's Books
-    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
-      span.navbar-toggler-icon
-    .collapse.navbar-collapse#navbarNavAltMarkup
-      ul.navbar-nav
-        li.nav-item
-          a.nav-link(href='/books') Books
-        li.nav-item
-          a.nav-link(href='/users') Users  
-        li.nav-item
-          a.nav-link(href='/transactions') Transactions
+block navbar
+  include ./layouts/navbar
+  block content
+  
   
 
     
