👌🍖 Checkpoint ./views/layouts/common.pug:15273419/751 ./views/layouts/navbar.pug:15273419/601 ./views/index.pug:15273419/42 ./middleware/auth.middleware.js:15273419/8

--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -5,6 +5,15 @@ html
     script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js" )
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js")
   body
-    block navbar
-    .container.py-3
+    nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+      a.navbar-brand(href='/') Nam's Books
+      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      .collapse.navbar-collapse#navbarNavAltMarkup
+        .navbar-nav
+          a.nav-item.nav-link(href='/books')| Books 
+          a.nav-item.nav-link(href='/users') Users
+          a.nav-item.nav-link(href='/transactions') Transactions
+    p= user.name
+    .container.pt-5      
       block content
