🚈🍋 Checkpoint ./views/layouts/common.pug:15273419/324 ./controller/auth.controller.js:15273419/33

--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -15,6 +15,7 @@ html
           a.nav-item.nav-link(href='/users') Users
           if user
             a.nav-item.nav-link(href='/transactions') Transactions
-      
+          else 
+            a.nav-item.nav-link.d-none(href='/transactions') Transactions
     .container.pt-5      
       block content
