--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -17,5 +17,36 @@ block content
               a.btn.btn-danger(href="books/" + book.id) Delete
             td
               a.btn.btn-secondary(href="books/"+book.id +"/rename") Rename
+    
+    nav(aria-label='Page navigation example')
+      ul.pagination.justify-content-center
+        li.page-item
+          a.page-link(href=`/books?page=1`, aria-label='First')
+            span(aria-hidden='true') &laquo;
+        if(page == 1)
+          li.page-item
+            a.page-link(href=`/books?page=1`) 1
+          li.page-item
+            a.page-link(href=`/books?page=2`) 2
+          li.page-item
+            a.page-link(href=`/books?page=3`) 3
+        else
+          if page < numberPage
+            li.page-item
+              a.page-link(href=`/books?page=${page-1}`)=page-1
+            li.page-item
+              a.page-link(href=`/books?page=${page}`)=page
+            li.page-item
+              a.page-link(href=`/books?page=${page+1}`)=page+1
+          else
+            li.page-item
+              a.page-link(href=`/books?page=${numberPage-2}`)=numberPage-2
+            li.page-item
+              a.page-link(href=`/books?page=${numberPage-1}`)=numberPage-1
+            li.page-item
+              a.page-link(href=`/books?page=${numberPage}`)=numberPage
+        li.page-item
+          a.page-link(href=`/books?page=${numberPage}`, aria-label='Last')
+            span(aria-hidden='true') &raquo;
           
-  
+      
