💽🌥 Checkpoint ./server.js:15273419/128 ./views/users/index.pug:15273419/437

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -8,12 +8,15 @@ block content
     table.table
       theat
         tr
+          th Avatar
           th Name
           th Delete
           th Rename  
       each user in users
         tbody
           tr
+            td
+              img(src='https://api.adorable.io/avatars/87/abott@adorable.io.png')
             td= user.name
             td
               a.btn.btn-danger(href="users/" + user.id) Delete
