--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -16,7 +16,7 @@ block content
         tbody
           tr
             td
-              img(src='https://api.adorable.io/avatars/87/abott@adorable.io.png')
+              img(src=`https://ui-avatars.com/api/?name=${user.name}`)
             td= user.name
             td
               a.btn.btn-danger(href="users/" + user.id) Delete
