🚐🐈 Checkpoint ./controller/auth.controller.js:15273419/200 ./db.json:15273419/602 ./views/users/index.pug:15273419/20

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -16,7 +16,7 @@ block content
         tbody
           tr
             td
-              img(src= user.avatarUrl)
+              img(src= user.avatarUrl+user.randomNum )
             td= user.name
             td
               a.btn.btn-danger(href="users/" + user.id) Delete
