--- a/views/users/rename.pug
+++ b/views/users/rename.pug
@@ -6,6 +6,9 @@ block content
       form-group
         label(for="name") Name
         input#title.form-control(name ="name")
+      form-group
+        label(for="avatar") Avartar
+        input#avatar.form-control-file(name ="avatar" type="file")  
 
       button.btn.btn-primary.mt-2 Submit
 
