--- a/views/users/rename.pug
+++ b/views/users/rename.pug
@@ -2,13 +2,13 @@ extends ../layouts/common
 block content
   .container  
     h1 Rename User
-    form(action="/users/" + userId + "/rename",method="POST")
+    form(action="/users/" + userId + "/rename",method="POST", enctype ="multipart/form-data")
       form-group
         label(for="name") Name
         input#title.form-control(name ="name")
       form-group
         label(for="avatar") Avartar
-        input#avatar.form-control-file(name ="avatar" type="file")  
+        input#avatar.form-control-file(name ="avatar" type="file")
 
       button.btn.btn-primary.mt-2 Submit
 
