--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -16,7 +16,7 @@ block content
         tbody
           tr
             td
-              img(src= user.avatarUrl+user.randomNum style='width: 90px; height: 90px; border-radius: 50%;')
+              img(src= user.avatarUrl style='width: 90px; height: 90px; border-radius: 50%;')
             td= user.name
             td
               a.btn.btn-danger(href="users/" + user.id) Delete
