🐲🐌 Checkpoint ./controller/cart.controller.js:15273419/491 ./views/books/index.pug:15273419/399 ./routes/book.route.js:15273419/1232 ./controller/book.controller.js:15273419/3743 ./routes/cart.route.js:15273419/212 ./db.json:15273419/24

--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -17,7 +17,8 @@ block content
               a.btn.btn-danger(href="books/" + book.id) Delete
             td
               a.btn.btn-secondary(href="books/"+book.id +"/rename") Rename
-            td   
+            td  
+              a.btn.btn-primary(href="books/"+book.id +"/add") Rent
     
     nav(aria-label='Page navigation example')
       ul.pagination.justify-content-center
