😽🌻 Checkpoint ./views/layouts/common.pug:15273419/3 ./routes/book.route.js:15273419/66 ./controller/book.controller.js:15273419/264

--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -12,7 +12,7 @@ html
         .navbar-nav
           a.nav-item.nav-link(href='/books')| Books 
           a.nav-item.nav-link(href='/users') Users
-          a.nav-item.nav-link(href='/books/newTrans') 
+          a.nav-item.nav-link(href='/books/newTrans') Cart
           if user && user.isAdmin
             a.nav-item.nav-link(href='/transactions') Transactions
           else 
