--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -12,7 +12,7 @@ html
         .navbar-nav
           a.nav-item.nav-link(href='/books')| Books 
           a.nav-item.nav-link(href='/users') Users
-          a.nav-item.nav-link(href='/books/newTrans') Cart
+          a.nav-item.nav-link(href='/cart') Cart
           if user && user.isAdmin
             a.nav-item.nav-link(href='/transactions') Transactions
           else 
